// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can render leading radio button control 1`] = `
<View
  accessibilityLabel="Default with leading control"
  accessibilityRole="radio"
  accessibilityState={
    Object {
      "checked": false,
      "disabled": false,
    }
  }
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      false,
      Object {},
    ]
  }
>
  <View
    pointerEvents="none"
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 16,
        "paddingVertical": 8,
      }
    }
  >
    <View
      accessibilityLiveRegion="polite"
      accessibilityRole="radio"
      accessibilityState={
        Object {
          "checked": false,
          "disabled": false,
        }
      }
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "overflow": "hidden",
          },
          Object {
            "animationDuration": 100,
            "animationScale": 1,
            "borderRadius": 18,
            "container": Object {
              "borderRadius": 20,
            },
            "dot": Object {
              "borderRadius": 5,
              "height": 10,
              "width": 10,
            },
            "padding": 6,
            "paddingHorizontal": 16,
            "paddingVertical": 8,
            "radio": Object {
              "borderRadius": 10,
              "height": 20,
              "margin": 8,
              "width": 20,
            },
            "radioContainer": Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
            "uncheckedColor": "rgba(73, 69, 79, 1)",
          },
        ]
      }
    >
      <View
        style={
          Object {
            "opacity": 0,
          }
        }
      >
        <Text
          allowFontScaling={false}
          color="rgba(73, 69, 79, 1)"
          name="check"
          size={24}
          style={
            Object {
              "animationScale": 1,
            }
          }
        />
      </View>
    </View>
    <Text
      style={
        Object {
          "color": undefined,
          "flexGrow": 1,
          "flexShrink": 1,
          "fontSize": 16,
          "textAlign": "right",
        }
      }
    >
      Default with leading control
    </Text>
  </View>
</View>
`;

exports[`renders unchecked 1`] = `
<View
  accessibilityLabel="Unchecked Button"
  accessibilityRole="radio"
  accessibilityState={
    Object {
      "checked": false,
      "disabled": false,
    }
  }
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      false,
      Object {},
    ]
  }
>
  <View
    pointerEvents="none"
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 16,
        "paddingVertical": 8,
      }
    }
  >
    <Text
      style={
        Object {
          "color": undefined,
          "flexGrow": 1,
          "flexShrink": 1,
          "fontSize": 16,
          "textAlign": "left",
        }
      }
    >
      Unchecked Button
    </Text>
    <View
      accessibilityLiveRegion="polite"
      accessibilityRole="radio"
      accessibilityState={
        Object {
          "checked": false,
          "disabled": false,
        }
      }
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "overflow": "hidden",
          },
          Object {
            "animationDuration": 100,
            "animationScale": 1,
            "borderRadius": 18,
            "container": Object {
              "borderRadius": 20,
            },
            "dot": Object {
              "borderRadius": 5,
              "height": 10,
              "width": 10,
            },
            "padding": 6,
            "paddingHorizontal": 16,
            "paddingVertical": 8,
            "radio": Object {
              "borderRadius": 10,
              "height": 20,
              "margin": 8,
              "width": 20,
            },
            "radioContainer": Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
            "uncheckedColor": "rgba(73, 69, 79, 1)",
          },
        ]
      }
    >
      <View
        style={
          Object {
            "opacity": 0,
          }
        }
      >
        <Text
          allowFontScaling={false}
          color="rgba(73, 69, 79, 1)"
          name="check"
          size={24}
          style={
            Object {
              "animationScale": 1,
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;
